--- a/app/src/main/res/layout/activity_detail_movie.xml
+++ b/app/src/main/res/layout/activity_detail_movie.xml
@@ -10,28 +10,17 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <com.github.florent37.shapeofview.shapes.ArcView
-            android:id="@+id/img_style"
+        <ImageView
+            android:id="@+id/img_poster"
             android:layout_width="match_parent"
             android:layout_height="450dp"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:elevation="10dip"
+            android:scaleType="fitXY"
+            android:src="@color/colorAccent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:shape_arc_height="-50dp"
-            app:shape_arc_position="bottom"
-            tools:ignore="MissingConstraints">
+            tools:ignore="ContentDescription" />
 
-            <ImageView
-                android:id="@+id/img_poster"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:scaleType="fitXY"
-                android:src="@color/colorAccent"
-                tools:ignore="ContentDescription"/>
-        </com.github.florent37.shapeofview.shapes.ArcView>
 
         <TextView
             android:id="@+id/tv_detail_title_movie"
@@ -41,12 +30,12 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
-            tools:text="Title Movie Detail"
-            android:maxLines="2"
             android:ellipsize="end"
+            android:maxLines="2"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/img_style" />
+            app:layout_constraintTop_toBottomOf="@+id/img_poster"
+            tools:text="Title Movie Detail" />
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cardView"
