--- a/app/src/main/res/layout/activity_detail_tv.xml
+++ b/app/src/main/res/layout/activity_detail_tv.xml
@@ -9,28 +9,15 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-        <com.github.florent37.shapeofview.shapes.ArcView
-            android:id="@+id/img_style"
+
+        <ImageView
+            android:id="@+id/img_poster_tv"
             android:layout_width="match_parent"
             android:layout_height="450dp"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:elevation="10dip"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            android:scaleType="fitXY"
+            android:src="@color/colorAccent"
             app:layout_constraintTop_toTopOf="parent"
-            app:shape_arc_height="-50dp"
-            app:shape_arc_position="bottom"
-            tools:ignore="MissingConstraints">
-
-            <ImageView
-                android:id="@+id/img_poster_tv"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:scaleType="fitXY"
-                android:src="@color/colorAccent"
-                tools:ignore="ContentDescription"/>
-        </com.github.florent37.shapeofview.shapes.ArcView>
+            tools:ignore="ContentDescription" />
 
         <TextView
             android:id="@+id/tv_detail_title_tv"
@@ -40,12 +27,12 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
-            tools:text="Title Tvshow Detail"
-            android:maxLines="2"
             android:ellipsize="end"
+            android:maxLines="2"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/img_style" />
+            app:layout_constraintTop_toBottomOf="@+id/img_poster_tv"
+            tools:text="Title Tvshow Detail" />
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cardView"
