--- a/app/src/main/res/layout/item_movie_placeholder.xml
+++ b/app/src/main/res/layout/item_movie_placeholder.xml
@@ -35,7 +35,7 @@
             android:layout_marginTop="8dp"
             android:ellipsize="end"
             android:lines="2"
-            android:text="@string/title_movie"
+            tools:text="@string/title_movie"
             style="@style/TextTitle"
             android:background="@color/placeHolerBackgroud"
             app:layout_constraintEnd_toEndOf="parent"
@@ -49,7 +49,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:text="@string/item_movie_release"
+            tools:text="@string/item_movie_release"
             style="@style/TextContent"
             android:background="@color/placeHolerBackgroud"
             app:layout_constraintEnd_toEndOf="parent"
@@ -63,7 +63,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:text="@string/duration_movie"
+            tools:text="@string/duration_movie"
             style="@style/TextContent"
             android:background="@color/placeHolerBackgroud"
             app:layout_constraintEnd_toEndOf="parent"
