--- a/app/src/main/res/layout/items_tv_show.xml
+++ b/app/src/main/res/layout/items_tv_show.xml
@@ -53,7 +53,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:text="Duration:"
+            android:text="@string/duration"
             style="@style/TextContent"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
